# pi-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PARITY.md  PHILOSOPHY.md  README.md  SECURITY.md  TODO.md  TODO_GAPS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.pi/: .gitignore  README.md  SYSTEM.md
.pi/extensions/example-extension/: extension.json
.pi/skills/example-skill/: SKILL.md
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: error.rs  lib.rs
crates/pi-agent-core/src/agent/: agent_loop.rs  events.rs  hooks.rs  mod.rs  state.rs
crates/pi-agent-core/src/context/: budget.rs  compaction.rs  mod.rs  tokens.rs
crates/pi-agent-core/src/messages/: mod.rs  queue.rs
crates/pi-agent-core/src/proxy/: mod.rs
crates/pi-agent-core/src/tools/: mod.rs  registry.rs  traits.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: error.rs  lib.rs
crates/pi-ai/src/auth/: api_key.rs  mod.rs  oauth.rs
crates/pi-ai/src/messages/: mod.rs  transform.rs  types.rs
crates/pi-ai/src/models/: cost.rs  mod.rs  registry.rs
crates/pi-ai/src/providers/: anthropic.rs  azure.rs  bedrock.rs  google.rs  mod.rs  openai.rs  registry.rs  retry.rs  traits.rs  vertex.rs
crates/pi-ai/src/streaming/: event_stream.rs  events.rs  mod.rs  sse.rs
crates/pi-ai/src/tools/: mod.rs  schema.rs
crates/pi-ai/src/utils/: mod.rs  partial_json.rs  proxy.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: auth.rs  lib.rs  main.rs
crates/pi-coding-agent/src/cli/: args.rs
crates/pi-coding-agent/src/compaction/: mod.rs
crates/pi-coding-agent/src/context/: mod.rs  resource_loader.rs
crates/pi-coding-agent/src/export/: ansi.rs  html.rs  mod.rs
crates/pi-coding-agent/src/extensions/: hooks.rs  mod.rs  types.rs  wasm.rs
crates/pi-coding-agent/src/input/: file_processor.rs
crates/pi-coding-agent/src/modes/: interactive.rs  json.rs  mod.rs  print.rs  rpc.rs  rpc_types.rs  tui.rs
crates/pi-coding-agent/src/prompts/: mod.rs
crates/pi-coding-agent/src/sdk/: mod.rs
crates/pi-coding-agent/src/session/: lock.rs  manager.rs  mod.rs  persistence.rs
crates/pi-coding-agent/src/settings/: mod.rs
crates/pi-coding-agent/src/skills/: mod.rs
crates/pi-coding-agent/src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  operations.rs  read.rs  truncate.rs  write.rs
crates/pi-coding-agent/tests/: cli_session_flags.rs  integration_workflows.rs  session_workflow.rs
crates/pi-mom/: Cargo.toml
crates/pi-mom/src/: lib.rs  main.rs
crates/pi-mom/src/events/: mod.rs
crates/pi-mom/src/sandbox/: mod.rs
crates/pi-mom/src/skills/: mod.rs
crates/pi-mom/src/slack/: events.rs  mod.rs  socket_mode.rs
crates/pi-mom/src/state/: channel.rs  mod.rs
crates/pi-pods/: Cargo.toml
crates/pi-pods/src/: lib.rs  main.rs
crates/pi-pods/src/cli/: commands.rs  mod.rs
crates/pi-pods/src/config/: mod.rs  model.rs  pod.rs
crates/pi-pods/src/providers/: mod.rs  vllm.rs
crates/pi-pods/src/ssh/: mod.rs
crates/pi-pods/src/vllm/: mod.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: lib.rs
crates/pi-tui/src/app/: framework.rs  mod.rs
crates/pi-tui/src/components/: autocomplete.rs  container.rs  diff.rs  editor.rs  footer.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  selectors.rs  streaming.rs  text.rs  tool_exec.rs  traits.rs
crates/pi-tui/src/fuzzy/: mod.rs
crates/pi-tui/src/image/: iterm2.rs  kitty.rs  mod.rs
crates/pi-tui/src/keyboard/: keybindings.rs  kitty.rs  mod.rs
crates/pi-tui/src/overlay/: mod.rs
crates/pi-tui/src/rendering/: differential.rs  mod.rs  synchronized.rs
crates/pi-tui/src/slash/: mod.rs
crates/pi-tui/src/terminal/: mod.rs  process.rs  virtual_term.rs
crates/pi-tui/src/theme/: mod.rs
crates/pi-web-ui/: Cargo.toml
crates/pi-web-ui/src/: lib.rs
crates/pi-web-ui/src/attachments/: mod.rs
crates/pi-web-ui/src/storage/: mod.rs  types.rs
crates/pi-web-ui/src/tools/: mod.rs
