[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent runtime with tool execution and event streaming"

[dependencies]
pi-ai = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
