[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified LLM API with multi-provider support"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
schemars = { workspace = true }
bytes = "1.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
live-tests = []
mock-providers = []
