[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified LLM API with multi-provider support"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
schemars = { workspace = true }
bytes = "1.5"

# AWS SigV4 signing for Bedrock
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# JWT signing for Vertex AI service accounts
jsonwebtoken = { workspace = true }

# CRC32 for Bedrock event stream parsing
crc32fast = { workspace = true }

# OAuth support
rand = "0.8"
keyring = "2"
dirs = "5"
aes-gcm = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
live-tests = []
mock-providers = []
