[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive CLI coding agent"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-ai = { workspace = true }
pi-agent-core = { workspace = true }
pi-tui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
