[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "π (pi) — High-performance AI coding agent with 101+ models, streaming TUI, and extensible plugin system"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-ai = { workspace = true }
pi-agent-core = { workspace = true }
pi-tui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
crossterm = { workspace = true }
serde_yaml = "0.9"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
fs2 = "0.4"
rustyline = { version = "14", default-features = false }

# Optional WASM executor
wasmtime = { version = "23", optional = true }
wasmtime-wasi = { version = "23", optional = true }

[features]
default = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
