[package]
name = "pi-mom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slack bot with AI agent capabilities"

[[bin]]
name = "pi-mom"
path = "src/main.rs"

[dependencies]
pi-ai = { workspace = true }
pi-agent-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = "0.21"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
