[package]
name = "pi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI library with differential rendering"

[dependencies]
crossterm = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
syntect = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
