[package]
name = "pi-web-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI components and backend for AI chat interfaces"

[dependencies]
pi-ai = { workspace = true }
pi-agent-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
